<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_marginLeft="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/sorting_by_a_z"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/iv_cancel"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:padding="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/cancel_popup" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:alpha="0.5"
        android:background="@color/colorGray" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="#ffffff"
        android:shrinkColumns="*"
        android:stretchColumns="*">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">


            <TextView
                android:id="@+id/tv_a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:fontFamily="@font/montserrat_semibold"
                android:padding="10dp"
                android:text="@string/a"
                android:textColor="@color/black1"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:fontFamily="@font/montserrat_semibold"
                android:padding="10dp"
                android:text="@string/b"
                android:textColor="@color/black1"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:fontFamily="@font/montserrat_semibold"
                android:padding="10dp"
                android:text="@string/c"
                android:textColor="@color/black1"
                android:textSize="20sp" />


            <TextView
                android:id="@+id/tv_d"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:fontFamily="@font/montserrat_semibold"
                android:padding="10dp"
                android:text="@string/d"
                android:textColor="@color/black1"
                android:textSize="20sp" />


            <TextView
                android:id="@+id/tv_e"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:fontFamily="@font/montserrat_semibold"
                android:padding="10dp"
                android:text="@string/e"
                android:textColor="@color/black1"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_f"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:fontFamily="@font/montserrat_semibold"
                android:padding="10dp"
                android:text="@string/f"
                android:textColor="@color/black1"
                android:textSize="20sp" />

        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">




            <TextView
                android:id="@+id/tv_g"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:fontFamily="@font/montserrat_semibold"
                android:padding="10dp"
                android:text="@string/g"
                android:textColor="@color/black1"
                android:textSize="20sp" />


            <TextView
                android:id="@+id/tv_h"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:fontFamily="@font/montserrat_semibold"
                android:padding="10dp"
                android:text="@string/h"
                android:textColor="@color/black1"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_i"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:fontFamily="@font/montserrat_semibold"
                android:padding="10dp"
                android:text="@string/i"
                android:textColor="@color/black1"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_j"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:fontFamily="@font/montserrat_semibold"
                android:padding="10dp"
                android:text="@string/j"
                android:textColor="@color/black1"
                android:textSize="20sp" />


            <TextView
                android:id="@+id/tv_k"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:fontFamily="@font/montserrat_semibold"
                android:padding="10dp"
                android:text="@string/k"
                android:textColor="@color/black1"
                android:textSize="20sp" />


            <TextView
                android:id="@+id/tv_l"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:fontFamily="@font/montserrat_semibold"
                android:padding="10dp"
                android:text="@string/l"
                android:textColor="@color/black1"
                android:textSize="20sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">



            <TextView
                android:id="@+id/tv_m"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:fontFamily="@font/montserrat_semibold"
                android:padding="10dp"
                android:text="@string/m"
                android:textColor="@color/black1"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_n"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:fontFamily="@font/montserrat_semibold"
                android:padding="10dp"
                android:text="@string/n"
                android:textColor="@color/black1"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_o"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:fontFamily="@font/montserrat_semibold"
                android:padding="10dp"
                android:text="@string/o"
                android:textColor="@color/black1"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_p"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:fontFamily="@font/montserrat_semibold"
                android:padding="10dp"
                android:text="@string/p"
                android:textColor="@color/black1"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_q"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:fontFamily="@font/montserrat_semibold"
                android:padding="10dp"
                android:text="@string/q"
                android:textColor="@color/black1"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_r"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:fontFamily="@font/montserrat_semibold"
                android:padding="10dp"
                android:text="@string/r"
                android:textColor="@color/black1"
                android:textSize="20sp" />

        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">




            <TextView
                android:id="@+id/tv_s"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:fontFamily="@font/montserrat_semibold"
                android:padding="10dp"
                android:text="@string/s"
                android:textColor="@color/black1"
                android:textSize="20sp" />


            <TextView
                android:id="@+id/tv_t"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:fontFamily="@font/montserrat_semibold"
                android:padding="10dp"
                android:text="@string/t"
                android:textColor="@color/black1"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_u"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:fontFamily="@font/montserrat_semibold"
                android:padding="10dp"
                android:text="@string/u"
                android:textColor="@color/black1"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_v"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:fontFamily="@font/montserrat_semibold"
                android:padding="10dp"
                android:text="@string/v"
                android:textColor="@color/black1"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_w"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:fontFamily="@font/montserrat_semibold"
                android:padding="10dp"
                android:text="@string/w"
                android:textColor="@color/black1"
                android:textSize="20sp" />


            <TextView
                android:id="@+id/tv_x"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:fontFamily="@font/montserrat_semibold"
                android:padding="10dp"
                android:text="@string/x"
                android:textColor="@color/black1"
                android:textSize="20sp" />

        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/tv_y"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:fontFamily="@font/montserrat_semibold"
                android:padding="10dp"
                android:text="@string/y"
                android:textColor="@color/black1"
                android:textSize="20sp" />


            <TextView
                android:id="@+id/tv_z"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:fontFamily="@font/montserrat_semibold"
                android:padding="10dp"
                android:text="@string/z"
                android:textColor="@color/black1"
                android:textSize="20sp" />


            <TextView
                android:id="@+id/tv_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:fontFamily="@font/montserrat_semibold"
                android:padding="10dp"
                android:text="@string/all"
                android:textColor="@color/black1"
                android:textSize="20sp" />


        </TableRow>

       <!-- <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">


            <TextView
                android:id="@+id/tv_z"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:fontFamily="@font/montserrat_semibold"
                android:padding="10dp"
                android:text="Z"
                android:textColor="@color/black1"
                android:textSize="20sp" />

        </TableRow>-->

    </TableLayout>


</LinearLayout>