<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/ll_nearby_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="25dp"
        android:background="@drawable/round_bottom_corner_colorprimary"
        android:orientation="vertical"
        android:paddingBottom="25dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"

            android:gravity="center"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_cancel"
                android:layout_width="20dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/left_arrow_white"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:text="@string/add_fact"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:fontFamily="@font/montserrat_semibold"
                android:textSize="20sp"
                android:layout_marginLeft="15dp"
                android:layout_gravity="center"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/img_save"
                android:layout_width="wrap_content"
                android:layout_marginRight="20dp"
               android:text="@string/saveAddfacts"
                android:fontFamily="@font/montserrat_medium"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_height="35dp" />

        </LinearLayout>

        <EditText
            android:id="@+id/edt_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/border_color_white"
            android:drawablePadding="10dp"
            android:hint="@string/event_name"
            android:paddingLeft="20dp"
            android:paddingRight="10dp" />

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="30dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/dateAddFacts"
            android:textSize="18sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="5dp"
            android:hint="@string/event_date"
            android:paddingLeft="10dp"
            android:background="@drawable/border_color_gray4"
            android:fontFamily="@font/montserrat_regular"
            android:singleLine="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="30dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/place"
            android:textSize="18sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="5dp"
            android:hint="@string/event_place"
            android:paddingLeft="10dp"
            android:background="@drawable/border_color_gray4"
            android:fontFamily="@font/montserrat_regular"
            android:singleLine="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="30dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/description"
            android:textSize="18sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="5dp"
            android:hint="@string/event_description"
            android:paddingLeft="10dp"
            android:background="@drawable/border_color_gray4"
            android:fontFamily="@font/montserrat_regular"          />
    </LinearLayout>


</LinearLayout>